fix display of forum description, truncate on large screens

--- a/assets/less/sugar/component/forums.less
+++ b/assets/less/sugar/component/forums.less
@@ -104,12 +104,26 @@
  * This allows for the styling of the text description of each forum
  */
 .forum-description {
-    .font-size(@base-font-size);
+    .font-size(14);
     font-weight: normal;
-    .line-height(@base-spacing-unit);
+    .line-height(@base-spacing-unit - @quarter-spacing-unit);
     
     display: block;
     .margin-bottom(@quarter-spacing-unit);
+
+    @media (min-width: @screen-m-min) { 
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        word-wrap: break-word;
+
+        //max-width: 100%;
+        
+
+        .margin-bottom(0); 
+    }
+}
+
 }
 
 /**
